apps/microbin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microbin
  labels:
    app.kubernetes.io/name: microbin
