apps/microbin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microbin
  namespace: microbin
  labels:
    app.kubernetes.io/name: microbin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: microbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: microbin
    spec:
      containers:
        - name: microbin
          image: danielszabo99/microbin:2.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: microbin-data
