apps/microbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbin
  namespace: microbin
  labels:
    app.kubernetes.io/name: microbin
spec:
  selector:
    app.kubernetes.io/name: microbin
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
